hphp/hack/test/typecheck/method_parameter_after_default_parameter.php.exp
File "method_parameter_after_default_parameter.php", line 4, characters 51-52:
A previous parameter has a default value.
Remove all the default values for the preceding parameters,
or add a default value to this one. (Typing[4077])
