hphp/hack/test/typecheck/method_parameter_after_default_parameter.php
<?hh

class C {
  public function foo(int $x, ?int $y = null, int $z): void {}
}
